# thera-vl

./: .cursorrules  .env.example  .gitignore  README.md  discord_example.md  implementation-plan.md  license  middleware.config.js  middleware.ts  package-lock.json  package.json  project-request.md  technical-spec.md  test_discord.md
.cursor/rules/: general.mdc
actions/db/: agents-actions.ts  (+4 more)
app/: layout.tsx
components/: header.tsx
db/: db.ts
lib/: stripe.ts
python-discord-bot/: .env  CHANGELOG.md  README.md  README_TESTS.md  config.py  conversation_history.txt  db_client.py  delete_commands.py  fix_commands.py  fix_quickstart.py  force_clear_commands.py  install_dependencies.sh  llm_client.py  local_env.yml  main.py  models.py  orchestrator.py  pyproject.toml  register_commands.py  requirements.txt  reset_commands.py  run.py  run_bot.sh  simple_delete_commands.py  sync_commands.py  test_agent_orchestration.ipynb  test_agent_variables.py  test_agent_variables_mock.py  test_llm_agents.py  test_llm_agents_mock.py  test_llm_client.py  test_tool_agent.py  tool_agent_file.py
python-discord-bot/commands/: __init__.py  agent_commands.py  brainstorm_commands.py  help_command.py  lab_agent_commands.py  lab_meeting_commands.py  lab_session_commands.py  lab_transcript_commands.py  meeting_commands.py  quickstart_command.py  quickstart_commands.py  session_commands.py  transcript_commands.py
python-discord-bot/examples/: llm_example.py
python-discord-bot/thera_vl_discord_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: fix-null-session-ids.ts
(+77 files in other folders)
